Add base template for key components needed: header, navigation bar, content, and footer

--- a/home.html
+++ b/home.html
@@ -9,3 +9,36 @@
     <!-- Your content goes here -->
 </body>
 </html>
+
+// include header
+<header>
+    <h1>Your Full Name</h1>
+    <p>Web Developer &amp; Creative Thinker</p>
+</header>
+
+
+// navigation bar
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="extracurriculars.html">Extracurriculars</a></li>
+        <li><a href="about.html">About</a></li>
+    </ul>
+</nav>
+
+
+// home page content
+<section id="about-me">
+    <h2>About Me</h2>
+    <p>
+        Hi, I'm Your Name! I'm a passionate web developer with a keen interest in creating meaningful and innovative projects.
+    </p>
+    <!-- Add more content about yourself -->
+</section>
+
+// footer
+<footer>
+    <p>Contact: your.email@example.com</p>
+    <p>Follow me on <a href="https://twitter.com/yourtwitter" target="_blank">Twitter</a></p>
+</footer>
