--- a/home.html
+++ b/home.html
@@ -18,9 +18,8 @@
 
 <nav>
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="extracurriculars.html">Extracurriculars</a></li>
+        <li><a href="journey.html">Journey</a></li>
+        <li><a href="adventure.html">Adventure</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
 </nav>
