--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Allison Here</title>
+    <title>Allison Lu</title>
 </head>
 <body>
     <!-- Your content goes here -->
@@ -11,7 +11,7 @@
 </html>
 
 <header>
-    <h1>Your Full Name</h1>
+    <h1>Allison Here,</h1>
     <p>Web Developer &amp; Creative Thinker</p>
 </header>
 
