Add base context for about me

--- a/about.html
+++ b/about.html
@@ -9,3 +9,53 @@
     <!-- Your content goes here -->
 </body>
 </html>
+
+
+<header>
+    <h1>Hello Hello! Allison Here,</h1>
+    <p>Allison: Going with the flow</p>
+</header>
+
+
+<nav>
+    <ul>
+        <li><a href="journey.html">Journey</a></li>
+        <li><a href="adventure.html">Adventure</a></li>
+        <li><a href="about.html">About</a></li>
+    </ul>
+</nav>
+
+
+<section id="about-me">
+    <h2>About Me</h2>
+    <p>
+        I'm a student at Boston University, who is just finding their path in life.
+        I am someone who takes on many side quests, and enjoy exploring new hobbies. 
+        I want to use my computer science knoweldge to make a positive impact while fostering a creative outlet.
+    </p>
+    <!-- Add more content about yourself -->
+</section>
+
+<section id="resume">
+    <h2>Resume</h2>
+    <h3>Experience</h3>
+    <p>
+        fsdfsd
+    </p>
+    <h3>Technical Skills</h3>
+    <p>
+        Java, Python, HTML, CSS, Javascript
+    </p>
+    <h3>Creative Skills</h3>
+    <p>
+        Adobe Illustrator, Figma
+    </p>
+    <!-- Add more content about yourself -->
+</section>
+
+
+<footer>
+    <h3>Let's connect!</h3>
+    <p>Contact: allisonlu100@gmail.com</p>
+    <p>Follow me on <a href="https://instagram.com/wholu.moo" target="_blank">instagram</a></p>
+</footer>
