Adding more base content for journey and adventure

--- a/adventure.html
+++ b/adventure.html
@@ -9,3 +9,40 @@
     <!-- Your content goes here -->
 </body>
 </html>
+
+<header>
+    <h1>It's never too late to explore!</h1>
+    <p>There's more than what meets the eye</p>
+</header>
+
+
+<nav>
+    <ul>
+        <li><a href="movement.html">Movement</a></li>
+        <li><a href="documentation.html">Documentation</a></li>
+        <li><a href="illustration.html">Illustration</a></li>
+    </ul>
+</nav>
+
+<nav>
+    <ul>
+        <li><a href="journey.html">Journey</a></li>
+        <li><a href="adventure.html">Adventure</a></li>
+        <li><a href="about.html">About</a></li>
+    </ul>
+</nav>
+
+
+<section id="about-me">
+    <h2>About Me</h2>
+    <p>
+        I'm a current senior at BU, majroing in Statistics and Computer Science and minoring in Public Health.
+    </p>
+    <!-- Add more content about yourself -->
+</section>
+
+
+<footer>
+    <p>Contact: allisonlu100@gmail.com</p>
+    <p>Follow me on <a href="https://instagram.com/wholu.moo" target="_blank">instagram</a></p>
+</footer>
