--- a/journey.html
+++ b/journey.html
@@ -9,3 +9,46 @@
     <!-- Your content goes here -->
 </body>
 </html>
+
+
+<header>
+    <h1>Allison Here,</h1>
+    <p>Web Developer &amp; Creative Thinker</p>
+</header>
+
+
+<nav>
+    <ul>
+        <li><a href="journey.html">Journey</a></li>
+        <li><a href="adventure.html">Adventure</a></li>
+        <li><a href="about.html">About</a></li>
+    </ul>
+</nav>
+
+
+<section id="about-me">
+    <h2>Journey</h2>
+    <p>
+        Finding my journey in the cs world. 
+    </p>
+    <!-- Add more content about yourself -->
+</section>
+
+<section id="coding-projects">
+    <h2>Coding Projects</h2>
+    <p>
+        Currency Exchange
+        This website
+    </p>
+    <h2>UX/UI Design</h2>
+    <p>
+        WHOBao
+        
+    </p>
+</section>
+
+
+<footer>
+    <p>Contact: allisonlu100@gmail.com</p>
+    <p>Follow me on <a href="https://instagram.com/wholu.moo" target="_blank">instagram</a></p>
+</footer>
