Add more specific to movement page (ie the dance component) - interesting context/text and videos

--- a/movement.html
+++ b/movement.html
@@ -26,31 +26,22 @@
 
 
 <section id="figure-skating">
-    <h2>Journey</h2>
-    <p>
-        Follow the flow.
-    </p>
+    <h2>Follow the flow.</h2>
+    <h3>Figure Skating</h3>
     <p> I've been figure skating since I was six years old.</p>
     <p> I've always loved the artistry and the ability to deliver a message.</p>
-    <!-- Add more content about yourself -->
+    <h3>Lost Boy - Ruth</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/390fQqPsn_8" frameborder="0" allowfullscreen></iframe>
 </section>
 
-<body>
-    <h1>Figure Skating Video</h1>
-    <iframe width="560" height="315" src="https://m.youtube.com/watch?v=390fQqPsn_8" frameborder="0" allowfullscreen></iframe>
-</body>
-
 <section id="kpop">
-    <h2>Coding Projects</h2>
+    <h2>Dance</h2>
     <p>
-        Currency Exchange
-        This website
+        Entering college, I got the opportunity to continue my passion in dance. 
+        Specifically, exploring more with hiphop and k-pop. I also quite enjoy freestyling and just letting the body flow. 
     </p>
-    <h2>UX/UI Design</h2>
-    <p>
-        WHOBao
-        
-    </p>
+    <h3>Dance Playlist</h3>>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/6POzGexsMkA&list=PLdHabHiQpbb4oHYzBRVb4g86Ojo8jbLe_" frameborder="0" allowfullscreen></iframe>
 </section>
 
 
