--- a/movement.html
+++ b/movement.html
@@ -40,7 +40,7 @@
         Entering college, I got the opportunity to continue my passion in dance. 
         Specifically, exploring more with hiphop and k-pop. I also quite enjoy freestyling and just letting the body flow. 
     </p>
-    <h3>Dance Playlist</h3>>
+    <h3>Dance Playlist</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/6POzGexsMkA&list=PLdHabHiQpbb4oHYzBRVb4g86Ojo8jbLe_" frameborder="0" allowfullscreen></iframe>
 </section>
 
