--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -32,7 +32,8 @@
     <p>Nothing like sharing happiness with one another</p>
     <h3>Documentation with loved ones</h3>
     <!-- Inserting images using the img tag -->
-    <img src="image1.jpg" alt="Description of Image 1">
+    <img src="../img/ireland kaing.JPG" alt="Kat and Ting">
+    <img src="../img/ireland tiat.JPG" alt="Kat and Ting">
     <img src="image2.jpg" alt="Description of Image 2">
     <img src="image3.jpg" alt="Description of Image 3">
     
