--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allison Lu</title>
+
+    <!--Img size-->
+    <style>
+        /* Optional: Add some basic styling for the gallery */
+        .image-gallery {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+        .image-gallery img {
+            max-width: 30%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
     <!-- Your content goes here -->
@@ -33,14 +47,6 @@
     <h3>Documentation with loved ones</h3>
     <!-- Inserting images using the img tag -->
 </section>
-    <style>
-        /* This CSS rule ensures that the image scales down to fit the screen width */
-        img {
-            width: 100%; /* Make the image take up 100% of its container's width */
-            max-width: 100%; /* Ensure the image doesn't exceed its natural size */
-            height: auto; /* Maintain the image's aspect ratio */
-        }
-    </style>
 
     <h1>Documentation with loved ones</h1>
 
@@ -51,9 +57,6 @@
         <img src="image3.jpg" alt="Description of Image 3">
         <!-- Add more images as needed -->
     </div>
-
-    <img src="../img/ireland kaing.JPG" alt="Kat and Ting">
-    <img src="../img/ireland tiat.JPG" alt="Kat and Ting">
 </section>
 
 <section id="kpop">
