--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -19,7 +19,7 @@
         }
         /* Apply a rotation based on the unique ID */
         #rotateSpecificImage {
-            transform: rotate(45deg);
+            transform: rotate(90deg);
         }
     </style>
 </head>
@@ -56,11 +56,12 @@
 
     <!-- Gallery using a div container -->
     <div class="image-gallery">
-        <img src="../img/ireland kat+ting2.JPG.JPG" alt="Kat and Ting">
+        <img src="../img/ireland kat+ting1.JPG" alt="Kat and Ting">
         <img src="../img/ireland kat+ting2.JPG" alt="Kat and Ting">
+        <img src="../img/rian.jpg" alt="Rian">
         <img src="../img/vicky.JPG" alt="Vicky">
         <img src="../img/grace.jpg" alt="Grace">
-        <img id="rotateSpecificImage" src="../img/ireland kat+ting2.JPG" alt="Rosanna">
+        <img id="rotateSpecificImage" src="../img/rosanna.jpg" alt="Rosanna">
         <!-- Add more images as needed -->
     </div>
 </section>
