documentation done with base photos for now, and update about page

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allison Lu</title>
+    <!--Img size-->
+    <style>
+        /* Optional: Add some basic styling for the gallery */
+        .image-gallery {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+        .image-gallery img {
+            max-width: 30%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
     <!-- Your content goes here -->
@@ -36,11 +49,22 @@
     <!-- Add more content about yourself -->
 </section>
 
+<section id="photo">
+    <!-- Gallery using a div container -->
+    <div class="image-gallery">
+        <img src="../img/profile/allison.JPG" alt="Allison">
+    </div>
+</section>
+
 <section id="resume">
     <h2>Resume</h2>
     <h3>Experience</h3>
     <p>
-        fsdfsd
+        Intern - International Road Federation<br>
+        Desktop Support Assistant - Boston University Medical Campus, Information Technology Department <br>
+        Human Resources Intern - Office of the Massachusetts State Treasurer and Receiver <br>
+        Digital Strategy Intern - Boston University, Development and Alumni Relations <br>
+        Coding Instructor - Code Academy
     </p>
     <h3>Technical Skills</h3>
     <p>
@@ -49,6 +73,11 @@
     <h3>Creative Skills</h3>
     <p>
         Adobe Illustrator, Figma
+    </p>
+    <h3>Certificate</h3>
+    <p>
+        fjdlsk
+        Google UX Design
     </p>
     <!-- Add more content about yourself -->
 </section>
