--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -44,24 +44,24 @@
 
 
 <section id="Friends-family">
-    <h2>Family and friends</h2>
+    <h2>Family and Friends</h2>
     <h3>Spreading happy seeds</h3>
     <p>I wouldn't be here without my family and friends. They have played such a pivotal role in my personality.</p>
     <p>Nothing like sharing happiness with one another</p>
     <h3>Documentation with loved ones</h3>
     <!-- Inserting images using the img tag -->
 </section>
-
-    <h1>Documentation with loved ones</h1>
-
+    <h3>Documentation with loved ones</h3>
     <!-- Gallery using a div container -->
     <div class="image-gallery">
-        <img src="../img/ireland kat+ting1.JPG" alt="Kat and Ting">
-        <img src="../img/ireland kat+ting2.JPG" alt="Kat and Ting">
-        <img src="../img/rian.jpg" alt="Rian">
-        <img src="../img/vicky.JPG" alt="Vicky">
-        <img src="../img/grace.jpg" alt="Grace">
-        <img id="rotateSpecificImage" src="../img/rosanna.jpg" alt="Rosanna">
+        <img src="../img/profile/ireland kat+ting1.JPG" alt="Kat and Ting">
+        <img src="../img/profile/ireland kat+ting2.JPG" alt="Kat and Ting">
+        <img src="../img/profile/rian.jpg" alt="Rian">
+        <img src="../img/profile/vicky.JPG" alt="Vicky">
+        <img src="../img/profile/grace.jpg" alt="Grace">
+        <img src="../img/profile/lanlan.jpg" alt="LanLan">
+        <img src="../img/profile/steph ting julie.jpg" alt="Steph, Ting, Julie">
+        <img id="rotateSpecificImage" src="../img/profile/rosanna.jpg" alt="Rosanna">
         <!-- Add more images as needed -->
     </div>
 </section>
@@ -73,8 +73,14 @@
         Leaving home base and just exploring, has given me time to self-reflect and view the world in a different light.
         From these photos, I hope to create the idea that in the grand scheme of things, life is short and we should all take the moment to appreiciate it.
     </p>
-    <h3>Dance Playlist</h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/6POzGexsMkA&list=PLdHabHiQpbb4oHYzBRVb4g86Ojo8jbLe_" frameborder="0" allowfullscreen></iframe>
+    <!-- Gallery using a div container -->
+    <div class="image-gallery">
+        <img src="../img/view/beach.jpg" alt="Tahoe beach">
+        <img src="../img/view/island.jpg" alt="Tahoe island">
+        <img src="../img/view/montreux.JPG" alt="Montreux">
+        <!-- Add more images as needed -->
+    </div>
+    
 </section>
 
 
