base for navigation bar + added new images

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <!-- Your content goes here -->
+    <!-- Include the navigation bar using JavaScript -->
+    <script>
+        document.write('<script src="navbar.html" type="text/javascript"><\/script>');
+    </script>
 </body>
 </html>
 
