--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -17,9 +17,12 @@
             height: auto;
         }
     </style>
-</head>
-<body>
-    <!-- Your content goes here -->
+    <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <!-- Your content goes here -->
+        <!-- Include the navigation bar using JavaScript -->
+        <iframe src="../components/navbar.html" frameborder="0" width="100%" height="60"></iframe>
 </body>
 </html>
 
