--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -22,9 +22,12 @@
             transform: rotate(90deg);
         }
     </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Your content goes here -->
+    <!-- Include the navigation bar using JavaScript -->
+    <iframe src="../components/navbar.html" frameborder="0" width="100%" height="60"></iframe>
 </body>
 </html>
 
