--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -17,12 +17,31 @@
             height: auto;
         }
     </style>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="../components/styles.css">
+    <script src="../components/navbar.js"></script>
+    <!-- Container for the navbar -->
+    <div id="navbar-container"></div>
+
     </head>
     <body>
         <!-- Your content goes here -->
         <!-- Include the navigation bar using JavaScript -->
-        <iframe src="../components/navbar.html" frameborder="0" width="100%" height="60"></iframe>
+        <!--<iframe src="../components/navbar.html" frameborder="0" width="100%" height="60"></iframe>-->
+        <!-- Include header.html using JavaScript -->
+    <script>
+        fetch('../components/header.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('header-container').innerHTML = data;
+            });
+    </script>
+        <script>
+            fetch('../components/navbar.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('navbar-container').innerHTML = data;
+                });
+        </script>
 </body>
 </html>
 
