added updated navbars to each site

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -17,7 +17,7 @@
             height: auto;
         }
     </style>
-    <link rel="stylesheet" type="text/css" href="../components/styles.css">
+    <link rel="stylesheet" type="text/css" href="../components/style.css">
     <script src="../components/script.js" defer></script>
     </head>
     <body>
