--- a/src/pages/WHOBao.html
+++ b/src/pages/WHOBao.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allison Lu</title>
-    <link rel="stylesheet" href="styles.css">
+    <!-- Include common structure from index.html -->
+    <link rel="stylesheet" href="../components/style.css">
+    <script defer src="../components/script.js"></script>
 </head>
 <body>
     <!-- Your content goes here -->
     <!-- Include the navigation bar using JavaScript -->
-    <iframe src="../components/navbar.html" frameborder="0" width="100%" height="60"></iframe>
+    <div id="navbar-container"></div>
 </body>
 </html>
 
