--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allison Lu</title>
-
     <!--Img size-->
     <style>
         /* Optional: Add some basic styling for the gallery */
@@ -22,12 +21,13 @@
             transform: rotate(90deg);
         }
     </style>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../components/style.css">
+    <script defer src="../components/script.js"></script>
 </head>
 <body>
     <!-- Your content goes here -->
     <!-- Include the navigation bar using JavaScript -->
-    <iframe src="../components/navbar.html" frameborder="0" width="100%" height="60"></iframe>
+    <div id="navbar-container"></div>
 </body>
 </html>
 
@@ -35,16 +35,6 @@
 <header>
     <h1>Documentation</h1>
 </header>
-
-
-<nav>
-    <ul>
-        <li><a href="journey.html">Journey</a></li>
-        <li><a href="adventure.html">Adventure</a></li>
-        <li><a href="about.html">About</a></li>
-    </ul>
-</nav>
-
 
 <section id="Friends-family">
     <h2>Family and Friends</h2>
