--- a/src/pages/illustration.html
+++ b/src/pages/illustration.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allison Lu</title>
-
     <!--Img size-->
     <style>
         /* Optional: Add some basic styling for the gallery */
@@ -22,12 +21,14 @@
             transform: rotate(90deg);
         }
     </style>
-    <link rel="stylesheet" href="styles.css">
+    <!-- Include common structure from index.html -->
+    <link rel="stylesheet" href="../components/style.css">
+    <script defer src="../components/script.js"></script>
 </head>
 <body>
     <!-- Your content goes here -->
     <!-- Include the navigation bar using JavaScript -->
-    <iframe src="../components/navbar.html" frameborder="0" width="100%" height="60"></iframe>
+    <div id="navbar-container"></div>
 </body>
 </html>
 
