adjust style, js, and html for specific pages respectively

--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -28,54 +28,49 @@
     <!-- Your content goes here -->
     <!-- Include the navigation bar using JavaScript -->
     <div id="navbar-container"></div>
+    <!-- Include page title-->
+    <header class="header-documentation">
+        <div class="header-content">
+            <h2 class="custom-header">documentation</h2>
+            <p class="header-description">sharing happy seeds.</p>
+        </div>
+    </header>
+    <main>
+        <section id="Friends-family" class="section">
+            <h2>Documentation of loved ones:</h2>
+            <p>I wouldn't be the person I am without my family and friends. 
+                They have played such a pivotal role in my personality.
+                There's nothing like sharing our happiness and memries with one another.</p>
+        </section>
+        <!-- Gallery using a div container -->
+        <div class="image-gallery">
+            <img src="../img/profile/ireland kat+ting1.JPG" alt="Kat and Ting">
+            <img src="../img/profile/ireland kat+ting2.JPG" alt="Kat and Ting">
+            <img src="../img/profile/rian.jpg" alt="Rian">
+            <img src="../img/profile/vicky.JPG" alt="Vicky">
+            <img src="../img/profile/grace.jpg" alt="Grace">
+            <img src="../img/profile/lanlan.jpg" alt="LanLan">
+            <img src="../img/profile/steph ting julie.jpg" alt="Steph, Ting, Julie">
+            <img id="rotateSpecificImage" src="../img/profile/rosanna.jpg" alt="Rosanna">
+            <!-- Add more images as needed -->
+        </div>
+        <section id="Scenery" class="section">
+            <h2>Documentation of landscapes:</h2>
+            <p>I've been given the opportunity to travel around the world and I wanted to share my exerience and joy with others.
+                Leaving home and just exploring, has given me time to self-reflect and view the world in a different light.
+                From these photos, I hope to create the idea that in the grand scheme of things, life is short and we should all take the moment to appreiciate it.
+            </p>
+        </section>
+        <!-- Gallery using a div container -->
+        <div class="image-gallery">
+            <img src="../img/view/beach.jpg" alt="Tahoe beach">
+            <img src="../img/view/island.jpg" alt="Tahoe island">
+            <img src="../img/view/montreux.JPG" alt="Montreux">
+            <!-- Add more images as needed -->
+        </div>
+    </main>
 </body>
 </html>
-
-
-<header>
-    <h1>Documentation</h1>
-</header>
-
-<section id="Friends-family">
-    <h2>Family and Friends</h2>
-    <h3>Spreading happy seeds</h3>
-    <p>I wouldn't be here without my family and friends. They have played such a pivotal role in my personality.</p>
-    <p>Nothing like sharing happiness with one another</p>
-    <h3>Documentation with loved ones</h3>
-    <!-- Inserting images using the img tag -->
-</section>
-    <h3>Documentation with loved ones</h3>
-    <!-- Gallery using a div container -->
-    <div class="image-gallery">
-        <img src="../img/profile/ireland kat+ting1.JPG" alt="Kat and Ting">
-        <img src="../img/profile/ireland kat+ting2.JPG" alt="Kat and Ting">
-        <img src="../img/profile/rian.jpg" alt="Rian">
-        <img src="../img/profile/vicky.JPG" alt="Vicky">
-        <img src="../img/profile/grace.jpg" alt="Grace">
-        <img src="../img/profile/lanlan.jpg" alt="LanLan">
-        <img src="../img/profile/steph ting julie.jpg" alt="Steph, Ting, Julie">
-        <img id="rotateSpecificImage" src="../img/profile/rosanna.jpg" alt="Rosanna">
-        <!-- Add more images as needed -->
-    </div>
-</section>
-
-<section id="Scenery">
-    <h2>Landscape</h2>
-    <p>
-        I've been given the opportunity to travel around the world. I wanted to share my exerience and joy with others.
-        Leaving home base and just exploring, has given me time to self-reflect and view the world in a different light.
-        From these photos, I hope to create the idea that in the grand scheme of things, life is short and we should all take the moment to appreiciate it.
-    </p>
-    <!-- Gallery using a div container -->
-    <div class="image-gallery">
-        <img src="../img/view/beach.jpg" alt="Tahoe beach">
-        <img src="../img/view/island.jpg" alt="Tahoe island">
-        <img src="../img/view/montreux.JPG" alt="Montreux">
-        <!-- Add more images as needed -->
-    </div>
-    
-</section>
-
 
 <footer>
     <p>Contact: allisonlu100@gmail.com</p>
