--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -20,39 +20,18 @@
     <link rel="stylesheet" type="text/css" href="../components/style.css">
     <script src="../components/script.js" defer></script>
     </head>
-    <body>
-        <!-- Your content goes here -->
-        <!-- Include the navigation bar using JavaScript -->
-        <!--<iframe src="../components/navbar.html" frameborder="0" width="100%" height="60"></iframe>-->
-        <!-- Include header.html using JavaScript -->
+ <body>
         <!-- Container for the navbar -->
         <div id="navbar-container"></div>
-
-        <script>
-            fetch('../components/index.html')
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('navbar-container').innerHTML = data;
-                });
-        </script>
+        <!-- Include header-->
+        <header class="header-about">
+            <div class="header-content">
+                <h2 class="custom-header">Hello Hello! Allison Here,</h2>
+                <p class="header-description">Allison: Going with the flow.</p>
+            </div>
+        </header>
 </body>
 </html>
-
-
-<header>
-    <h1>Hello Hello! Allison Here,</h1>
-    <p>Allison: Going with the flow</p>
-</header>
-
-
-<nav>
-    <ul>
-        <li><a href="journey.html">Journey</a></li>
-        <li><a href="adventure.html">Adventure</a></li>
-        <li><a href="about.html">About</a></li>
-    </ul>
-</nav>
-
 
 <section id="about-me">
     <h2>About Me</h2>
