--- a/src/pages/adventure.html
+++ b/src/pages/adventure.html
@@ -11,40 +11,33 @@
     <!-- Your content goes here -->
     <!-- Include the navigation bar using JavaScript -->
     <div id="navbar-container"></div>
+    <!-- Include page title-->
+    <header class="header-adventure">
+        <div class="header-content">
+            <h2 class="custom-header">adventure</h2>
+            <p class="header-description">It's never too late to explore, <br>
+                there's more than what meets the eye.</p>
+        </div>
+    </header>
+    <main>
+        <section id="movement" class="section">
+            <h2>movement: </h2>
+            <p>explore the power of movement and flow</p>
+        </section>
+
+        <section id="documentation" class="section">
+            <h2>documentation:</h2>
+            <p>explore the power of documenting loved ones</p>
+        </section>
+
+        <section id="illustration" class="section">
+            <h2>illustration:</h2>
+            <p>explore the power of art and illustration</p>
+        </section>
+        <!-- Add more sections as needed -->
+    </main>
 </body>
 </html>
-
-<header>
-    <h1>It's never too late to explore!</h1>
-    <p>There's more than what meets the eye</p>
-</header>
-
-
-<nav>
-    <ul>
-        <li><a href="movement.html">Movement</a></li>
-        <li><a href="documentation.html">Documentation</a></li>
-        <li><a href="illustration.html">Illustration</a></li>
-    </ul>
-</nav>
-
-<nav>
-    <ul>
-        <li><a href="journey.html">Journey</a></li>
-        <li><a href="adventure.html">Adventure</a></li>
-        <li><a href="about.html">About</a></li>
-    </ul>
-</nav>
-
-
-<section id="about-me">
-    <h2>About Me</h2>
-    <p>
-        I'm a current senior at BU, majroing in Statistics and Computer Science and minoring in Public Health.
-    </p>
-    <!-- Add more content about yourself -->
-</section>
-
 
 <footer>
     <p>Contact: allisonlu100@gmail.com</p>
