--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -42,17 +42,45 @@
                 They have played such a pivotal role in my personality.
                 There's nothing like sharing our happiness and memries with one another.</p>
         </section>
-        <!-- Gallery using a div container -->
-        <div class="image-gallery">
-            <img src="../img/profile/ireland kat+ting1.JPG" alt="Kat and Ting">
-            <img src="../img/profile/ireland kat+ting2.JPG" alt="Kat and Ting">
-            <img src="../img/profile/rian.jpg" alt="Rian">
-            <img src="../img/profile/vicky.JPG" alt="Vicky">
-            <img src="../img/profile/grace.jpg" alt="Grace">
-            <img src="../img/profile/lanlan.jpg" alt="LanLan">
-            <img src="../img/profile/steph ting julie.jpg" alt="Steph, Ting, Julie">
-            <img id="rotateSpecificImage" src="../img/profile/rosanna.jpg" alt="Rosanna">
-            <!-- Add more images as needed -->
+        <div class="slider-container">
+            <div class="slider">
+                <div class="slide" id="slide1">
+                    <img src="../img/profile/ireland kat+ting1.JPG" alt="Kat and Ting">
+                </div>
+                <div class="slide" id="slide2">
+                    <img src="../img/profile/ireland kat+ting2.JPG" alt="Kat and Ting">
+                </div>
+                <div class="slide" id="slide3">
+                    <img src="../img/profile/rian.jpg" alt="Rian">
+                </div>
+                <div class="slide" id="slide4">
+                    <img src="../img/profile/vicky.JPG" alt="Vicky">
+                </div>
+                <div class="slide" id="slide5">
+                    <img src="../img/profile/grace.JPG" alt="Grace">
+                </div>
+                <div class="slide" id="slide6">
+                    <img src="../img/profile/lanlan.jpg" alt="LanLan">
+                </div>
+                <div class="slide" id="slide7">
+                    <img src="../img/profile/steph ting julie.jpg" alt="Steph, Ting, Julie">
+                </div>
+                <div class="slide" id="slide8">
+                    <img id="rotateSpecificImage" src="../img/profile/rosanna.jpg" alt="Rosanna">
+                </div>
+                <!-- Add more slides as needed -->
+            </div>
+            <div class="slider-nav">
+                <button class="prev" onclick="prevSlide()">❮</button>
+                <div class="slider-dots">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(4)"></span>
+                    <!-- Add more dots as needed -->
+                </div>
+                <button class="next" onclick="nextSlide()">❯</button>
+            </div>
         </div>
         <section id="Scenery" class="section">
             <h2>Documentation of landscapes:</h2>
