--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -29,7 +29,7 @@
     <!-- Include the navigation bar using JavaScript -->
     <div id="navbar-container"></div>
     <!-- Include page title-->
-    <header class="header-documentation">
+    <header class="c">
         <div class="header-content">
             <h2 class="custom-header">documentation</h2>
             <p class="header-description">sharing happy seeds.</p>
@@ -42,44 +42,48 @@
                 They have played such a pivotal role in my personality.
                 There's nothing like sharing our happiness and memries with one another.</p>
         </section>
-        <div class="slider-container">
+        <div class="slider-container" id="slider2">
             <div class="slider">
-                <div class="slide" id="slide1">
+                <button class="prev" onclick="prevSlide(1)">❮</button>
+                <div class="slide" id="slide1a">
                     <img src="../img/profile/ireland kat+ting1.JPG" alt="Kat and Ting">
                 </div>
-                <div class="slide" id="slide2">
+                <div class="slide" id="slide1b">
                     <img src="../img/profile/ireland kat+ting2.JPG" alt="Kat and Ting">
                 </div>
-                <div class="slide" id="slide3">
+                <div class="slide" id="slide1c">
                     <img src="../img/profile/rian.jpg" alt="Rian">
                 </div>
-                <div class="slide" id="slide4">
+                <div class="slide" id="slide1d">
                     <img src="../img/profile/vicky.JPG" alt="Vicky">
                 </div>
-                <div class="slide" id="slide5">
+                <div class="slide" id="slide1e">
                     <img src="../img/profile/grace.JPG" alt="Grace">
                 </div>
-                <div class="slide" id="slide6">
+                <div class="slide" id="slide1f">
                     <img src="../img/profile/lanlan.jpg" alt="LanLan">
                 </div>
-                <div class="slide" id="slide7">
+                <div class="slide" id="slide1g">
                     <img src="../img/profile/steph ting julie.jpg" alt="Steph, Ting, Julie">
                 </div>
-                <div class="slide" id="slide8">
+                <div class="slide" id="slide1h">
                     <img id="rotateSpecificImage" src="../img/profile/rosanna.jpg" alt="Rosanna">
                 </div>
+                <button class="next" onclick="nextSlide(1)">❯</button>
                 <!-- Add more slides as needed -->
             </div>
-            <div class="slider-nav">
-                <button class="prev" onclick="prevSlide()">❮</button>
-                <div class="slider-dots">
-                    <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>
-                    <span class="dot" onclick="currentSlide(4)"></span>
-                    <!-- Add more dots as needed -->
-                </div>
-                <button class="next" onclick="nextSlide()">❯</button>
+                <div class="thumbnail-container">
+                    <div class="thumbnails" id="thumbnails1">
+                        <img src="../img/profile/ireland kat+ting1.JPG" alt="Kat and Ting" onclick="currentSlide(1, 1)" class="thumbnail">
+                        <img src="../img/profile/ireland kat+ting2.JPG" alt="Kat and Ting" onclick="currentSlide(2, 1)" class="thumbnail">
+                        <img src="../img/profile/rian.jpg" alt="Rian" onclick="currentSlide(3, 1)" class="thumbnail">
+                        <img src="../img/profile/vicky.jpg" alt="Vicky" onclick="currentSlide(4, 1)" class="thumbnail">
+                        <img src="../img/profile/grace.jpg" alt="Grace" onclick="currentSlide(5, 1)" class="thumbnail">
+                        <img src="../img/profile/lanlan.jpg" alt="LanLan" onclick="currentSlide(6, 1)" class="thumbnail">
+                        <img src="../img/profile/steph ting julie.jpg" alt="Steph, Ting, Julie" onclick="currentSlide(7,1 )" class="thumbnail">
+                        <img id="rotateSpecificImage" src="../img/profile/rosanna.jpg" alt="Rosanna" onclick="currentSlide(8, 1)" class="thumbnail">
+                        <!-- Add more thumbnails as needed -->
+                    </div>
             </div>
         </div>
         <section id="Scenery" class="section">
@@ -90,11 +94,32 @@
             </p>
         </section>
         <!-- Gallery using a div container -->
-        <div class="image-gallery">
-            <img src="../img/view/beach.jpg" alt="Tahoe beach">
-            <img src="../img/view/island.jpg" alt="Tahoe island">
-            <img src="../img/view/montreux.JPG" alt="Montreux">
-            <!-- Add more images as needed -->
+        <div class="slider-container" id="slider2">
+            <div class="slider">
+                <button class="prev" onclick="prevSlide(2)">❮</button>
+                <div class="slide" id="slide2a">
+                    <img src="../img/view/beach.jpg" alt="Tahoe beach">
+                </div>
+                <div class="slide" id="slide2b">
+                    <img src="../img/view/island.jpg" alt="Tahoe island">
+                </div>
+                <div class="slide" id="slide2c">
+                    <img src="../img/view/montreux.JPG" alt="Montreux">
+                </div>
+                <!-- Add more slides as needed -->
+                <button class="next" onclick="nextSlide(1)">❯</button>
+                
+            </div>
+            <div class="slider-nav">
+                <div class="thumbnail-container">
+                    <div class="thumbnails" id="thumbnails2">
+                        <img src="../img/view/beach.jpg" alt = "Tahoe beach" onclick="currentSlide(1 ,2)" class="thumbnail">
+                        <img src="../img/view/island.jpg" alt="Tahoe island" onclick="currentSlide(2, 2)" class="thumbnail">
+                        <img src="../img/view/montreux.JPG" alt="Montreux" onclick="currentSlide(3, 2)" class="thumbnail">
+                        <!-- Add more thumbnails as needed -->
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
