try to work on consistent footer

--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -29,7 +29,7 @@
     <!-- Include the navigation bar using JavaScript -->
     <div id="navbar-container"></div>
     <!-- Include page title-->
-    <header class="c">
+    <header class="header-documentation">
         <div class="header-content">
             <h2 class="custom-header">documentation</h2>
             <p class="header-description">sharing happy seeds.</p>
@@ -124,8 +124,3 @@
     </main>
 </body>
 </html>
-
-<footer>
-    <p>Contact: allisonlu100@gmail.com</p>
-    <p>Follow me on <a href="https://instagram.com/wholu.moo" target="_blank">instagram</a></p>
-</footer>
