--- a/src/pages/illustration.html
+++ b/src/pages/illustration.html
@@ -29,40 +29,57 @@
     <!-- Your content goes here -->
     <!-- Include the navigation bar using JavaScript -->
     <div id="navbar-container"></div>
+    <!-- Include header-->
+    <header class="header-about">
+        <div class="header-content">
+            <h2 class="custom-header">illustration</h2>
+            <p class="header-description">Since the pandemic, my interest in sketching and pating have resurfaced. <br>
+                I enter a zone with my music, paints, and canvas where i lose track of time and dive into my break.</p>
+        </div>
+    </header>
+    <main>
+        <section id="illustration" class="section">
+            <h2>Artwork:</h2>
+        </section>
+        <div class="slider-container">
+            <div class="slider">
+                <button class="prev" onclick="prevSlide(2)">❮</button>
+                <div class="slide" id="slide3a">
+                    <img src="../img/artwork/eye.jpg" alt="Eye Forest">
+                </div>
+                <div class="slide" id="slide3b">
+                    <img src="../img/artwork/girl backpack.jpg" alt="Girl with backpack">
+                </div>
+                <div class="slide" id="slide3c">
+                    <img src="../img/artwork/lightbulb.jpg" alt="Fish and lightbulb">
+                </div>
+                <div class="slide" id="slide3d">
+                    <img src="../img/artwork/cherry blossom.jpeg" alt="Cherry Blossoms">
+                </div>
+                <div class="slide" id="slide3e">
+                    <img src="../img/artwork/mountain.jpeg" alt="Mountain">
+                </div>
+                <!-- Add more slides as needed -->
+                <button class="next" onclick="nextSlide(1)">❯</button>
+                
+            </div>
+            <div class="slider-nav">
+                <div class="thumbnail-container">
+                    <div class="thumbnails" id="thumbnails2">
+                        <img src="../img/artwork/eye.jpg" alt="Eye Forest" onclick="currentSlide(1, 3)" class="thumbnail">
+                            <img src="../img/artwork/girl backpack.jpg" alt="Girl with backpack" onclick="currentSlide(2, 3)" class="thumbnail">
+                            <img src="../img/artwork/lightbulb.jpg" alt="Fish and lightbulb" onclick="currentSlide(3, 3)" class="thumbnail">
+                            <img src="../img/artwork/cherry blossom.jpeg" alt="Cherry Blossoms" onclick="currentSlide(4, 3)" class="thumbnail">
+                            <img src="../img/artwork/mountain.jpeg" alt="Mountain" onclick="currentSlide(5, 3)" class="thumbnail">
+                            <!-- Add more thumbnails as needed -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
 </body>
 </html>
-
-
-<header>
-    <h1>Documentation</h1>
-</header>
-
-
-<nav>
-    <ul>
-        <li><a href="journey.html">Journey</a></li>
-        <li><a href="adventure.html">Adventure</a></li>
-        <li><a href="about.html">About</a></li>
-    </ul>
-</nav>
-
-
-<section id="illustration">
-    <h2>Illustration</h2>
-    <p>Since the pandemic, my interest in sketching and painting have resurfaced. <br>
-        I enter a zone with my music, paints, and canvas, losing track of time, I dive into my break.
-    </p> 
-    <h3>Artwork</h3>
-    <!-- Inserting images using the img tag -->
-    <div class="image-gallery">
-        <img src="../img/artwork/eye.jpg" alt="Eye Forest">
-        <img src="../img/artwork/girl backpack.jpg" alt="Girl with backpack">
-        <img src="../img/artwork/lightbulb.jpg" alt="Fish and lightbulb">
-        <img src="../img/artwork/cherry blossom.jpeg" alt="Cherry Blossoms">
-        <img src="../img/artwork/mountain.jpeg" alt="Mountain">
-        <!-- Add more images as needed -->
-    </div>
-</section>
 
 <footer>
     <p>Contact: allisonlu100@gmail.com</p>
