--- a/src/pages/journey.html
+++ b/src/pages/journey.html
@@ -12,48 +12,43 @@
     <!-- Your content goes here -->
     <!-- Include the navigation bar using JavaScript -->
     <div id="navbar-container"></div>
-    
-    <!--iframe src="../components/navbar.html" frameborder="0" width="100%" height="60"></iframe>-->
+    <!-- Include page title-->
+    <header class="header-journey">
+        <div class="header-content">
+            <h2 class="custom-header">Allison's Journey</h2>
+            <p class="header-description">as Web Developer &amp; Creative Thinker</p>
+        </div>
+    </header>
+    <main>
+        <section id="about-me" class="section">
+            <h2>about me: </h2>
+            <p>finding my journey within the cs world</p>
+        </section>
+
+        <section id="coding-projects" class="section">
+            <div class ="content">
+                <h2>Coding Projects:</h2>
+                <p>Java, HTML, CSS, Javascript<br>
+                Currency Exchange, this website</p>
+            </div>
+            <div class = "image-container">
+                <img class="icons" src="../img/coding projects icon.png" alt="Programming Icon">
+            </div>
+        </section>
+
+        <section id="UX-UI" class="section">
+            <div class="image-container">
+                <img class="icons" src = "../img/smartphone.png" alt="Smartphone">
+            </div>
+            <div class="content">
+                <h2>UX/UI Research Design:</h2>
+                <p>WHOBao</p>
+            </div>
+        </section>
+        <!-- Add more sections as needed -->
+    </main>
 </body>
 </html>
-
-
-<header>
-    <h1>Allison Here,</h1>
-    <p>Web Developer &amp; Creative Thinker</p>
-</header>
-
-
-<nav>
-    <ul>
-        <li><a href="journey.html">Journey</a></li>
-        <li><a href="adventure.html">Adventure</a></li>
-        <li><a href="about.html">About</a></li>
-    </ul>
-</nav>
-
-
-<section id="about-me">
-    <h2>Journey</h2>
-    <p>
-        Finding my journey in the cs world. 
-    </p>
-    <!-- Add more content about yourself -->
-</section>
-
-<section id="coding-projects">
-    <h2>Coding Projects</h2>
-    <p>
-        Currency Exchange
-        This website
-    </p>
-    <h2>UX/UI Design</h2>
-    <p>
-        WHOBao
-        
-    </p>
-</section>
-
 
 <footer>
     <p>Contact: allisonlu100@gmail.com</p>
