update movement page

--- a/src/pages/movement.html
+++ b/src/pages/movement.html
@@ -12,43 +12,36 @@
     <!-- Your content goes here -->
     <!-- Include the navigation bar using JavaScript -->
     <div id="navbar-container"></div>
+       <!-- Include page title-->
+       <header class="header-movement">
+        <div class="header-content">
+            <h2 class="custom-header">movement</h2>
+            <p class="header-description">follow the flow.</p>
+        </div>
+    </header>
+
+    <div class="video-container">
+        <!-- Left video and text -->
+        <div class="video-group">
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/390fQqPsn_8" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="text">
+                <p>Figure Skating to "Lost Boy" by Ruth</p>
+                <p>I've been figure skating since I was six years old and something that's always drawn me in was the artistry utilized to deliver a message.</p>
+            </div>
+        </div>
+        <!-- Right video and text -->
+        <div class="video-group">
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/6POzGexsMkA&list=PLdHabHiQpbb4oHYzBRVb4g86Ojo8jbLe_" frameborder="0" allowfullscreen></iframe>            </div>
+            <div class="text">
+                <p>Dancing to k-pop</p>
+            <p>Entering college, I got the opportunity my passion in dnace through the lens of hiphop and k-pop. I also quite enjoy freestyling and just letting the body move.</p>
+            </div>
+        </div>
 </body>
 </html>
-
-
-<header>
-    <h1>Movement</h1>
-</header>
-
-
-<nav>
-    <ul>
-        <li><a href="journey.html">Journey</a></li>
-        <li><a href="adventure.html">Adventure</a></li>
-        <li><a href="about.html">About</a></li>
-    </ul>
-</nav>
-
-
-<section id="figure-skating">
-    <h2>Follow the flow.</h2>
-    <h3>Figure Skating</h3>
-    <p> I've been figure skating since I was six years old.</p>
-    <p> I've always loved the artistry and the ability to deliver a message.</p>
-    <h3>Lost Boy - Ruth</h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/390fQqPsn_8" frameborder="0" allowfullscreen></iframe>
-</section>
-
-<section id="kpop">
-    <h2>Dance</h2>
-    <p>
-        Entering college, I got the opportunity to continue my passion in dance. 
-        Specifically, exploring more with hiphop and k-pop. I also quite enjoy freestyling and just letting the body flow. 
-    </p>
-    <h3>Dance Playlist</h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/6POzGexsMkA&list=PLdHabHiQpbb4oHYzBRVb4g86Ojo8jbLe_" frameborder="0" allowfullscreen></iframe>
-</section>
-
 
 <footer>
     <p>Contact: allisonlu100@gmail.com</p>
