update about page

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -30,52 +30,97 @@
                 <p class="header-description">Allison: Going with the flow.</p>
             </div>
         </header>
+
+        <main>
+            <section id="about-me" class="section">
+                <div class ="content">
+                    <h2>About Me</h2>
+                    <p>I'm a student at Boston University, who is just finding their path in life. <br>
+                        I am someone who takes on many side quests, and enjoy exploring new hobbies. <br>
+                        I want to use my computer science knoweldge to make a positive impact while fostering a creative outlet.
+                    </p>
+                </div>
+                <div class = "image-container">
+                    <img class = profile src="../img/profile/allison.JPG" alt="Allison">
+                </div>
+            </section>
+        </main>
+
+        <div class="resume-container">
+            <!-- Large centered title -->
+            <div class="resume-title">
+                <h1>Resume</h1>
+            </div>
+    
+            <!-- Work Experience section -->
+            <div class="work-experience">
+                <!-- Side title -->
+                <div class="left-title">
+                    <h2>Work Experience</h2>
+                </div>
+    
+                <!-- Experiences -->
+                <div class="sideTitle">
+                    <!-- Individual experience -->
+                    <div class="description">
+                        <p> <b>Sep 2023-now</b> Intern - International Road Federation<br>
+                            <b>Feb 2021-now</b>Desktop Support Assistant - Boston University Medical Campus, Information Technology Department <br>
+                            <b>Jun-Aug 2023</b>Human Resources Intern - Office of the Massachusetts State Treasurer and Receiver <br>
+                            <b>Feb-May 2023</b>Digital Strategy Intern - Boston University, Development and Alumni Relations <br>
+                            <b>May-Aug 2022</b>Coding Instructor - Code Academy <br>
+                            <b>Aug 2022 - Aug 2023</b>Resident Assistant - Boston University, Residence Life <br>
+                            <b>Sep2020-May2022</b>Co-graphic Designer - Boston Univeristy, Chinese Student Association
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Work Experience section -->
+            <div class="technical-skills">
+                <!-- Side title -->
+                <div class="left-title">
+                    <h2>Technical Skills</h2>
+                </div>
+
+                <!-- Experiences -->
+                <div class="sideTitle">
+                    <!-- Individual experience -->
+                    <div class="description">
+                        <p> 
+                            <b>Programming</b> <br>
+                            Java, C++, Python, HTML, CSS, Javascript, Go, R <br>
+                            <b>Creative</b> <br>
+                            Adobe Illustrator, Figma, Adobe Acrobat, Adobe XD, Premier Pro <br>
+                            <b>Microsoft Suite</b> <br>
+                            Excel, Word, PowerPoint, Outlook, Teams
+                        </p>
+                        </div> 
+                    </div>
+            </div>
+
+            <!-- Work Experience section -->
+            <div class="certification">
+                <!-- Side title -->
+                <div class="left-title">
+                    <h2>Certificates</h2>
+                </div>
+
+                <!-- Experiences -->
+                <div class="sideTitle">
+                    <!-- Individual experience -->
+                    <div class="description">
+                        <p> 
+                            <b>2023</b> Collaborative Institutional Training Initiative <br>
+                            <b>2023</b> Google UX Design Career: Foundations of User Experience (UX) Design <br>
+                            <b>2023</b> Start the UX Design Process: Empathize, Define, and Ideate <br>
+                            <b>2023</b> Conduct UX Research and Test Early Concepts <br>
+                        </p>
+                        </div> 
+                    </div>
+            </div>
+        </div>
 </body>
 </html>
-
-<section id="about-me">
-    <h2>About Me</h2>
-    <p>
-        I'm a student at Boston University, who is just finding their path in life.
-        I am someone who takes on many side quests, and enjoy exploring new hobbies. 
-        I want to use my computer science knoweldge to make a positive impact while fostering a creative outlet.
-    </p>
-    <!-- Add more content about yourself -->
-</section>
-
-<section id="photo">
-    <!-- Gallery using a div container -->
-    <div class="image-gallery">
-        <img src="../img/profile/allison.JPG" alt="Allison">
-    </div>
-</section>
-
-<section id="resume">
-    <h2>Resume</h2>
-    <h3>Experience</h3>
-    <p>
-        Intern - International Road Federation<br>
-        Desktop Support Assistant - Boston University Medical Campus, Information Technology Department <br>
-        Human Resources Intern - Office of the Massachusetts State Treasurer and Receiver <br>
-        Digital Strategy Intern - Boston University, Development and Alumni Relations <br>
-        Coding Instructor - Code Academy
-    </p>
-    <h3>Technical Skills</h3>
-    <p>
-        Java, Python, HTML, CSS, Javascript
-    </p>
-    <h3>Creative Skills</h3>
-    <p>
-        Adobe Illustrator, Figma
-    </p>
-    <h3>Certificate</h3>
-    <p>
-        fjdlsk
-        Google UX Design
-    </p>
-    <!-- Add more content about yourself -->
-</section>
-
 
 <footer>
     <h3>Let's connect!</h3>
